Bug 364378 - Zanshin disappears from Task Manager after virtual desktop switch
Summary: Zanshin disappears from Task Manager after virtual desktop switch
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-16 13:33 UTC by Kai Uwe Broulik
Modified: 2016-06-16 19:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
xprop of Zanshin window (37.07 KB, text/plain)
2016-06-16 13:34 UTC, Kai Uwe Broulik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kai Uwe Broulik 2016-06-16 13:33:21 UTC
Zanshin disappears from Task Manager after I switch virtual desktops. It affects both the KDE4 and "Next" variant.

Reproducible: Always

Steps to Reproduce:
1. Start Zanshin
2. Make sure you have at least two virtual desktops
3. Switch to other virtual desktop
4. Switch back to virtual desktop where Zanshin is

Actual Results:  
Zanshin window no longer shows up in task manager. If I open a new window, Zanshin magically re-appears
Comment 1 Kai Uwe Broulik 2016-06-16 13:34:45 UTC
Created attachment 99527 [details]
xprop of Zanshin window
Comment 2 Kai Uwe Broulik 2016-06-16 13:35:01 UTC
xprop of its leader window:
_KDE_NET_WM_USER_CREATION_TIME(CARDINAL) = 9404732
SM_CLIENT_ID(STRING) = "101b519913014b000146608376500000011760079"
WM_CLIENT_LEADER(WINDOW): window id # 0x4800004
Comment 3 Eike Hein 2016-06-16 19:33:24 UTC
Git commit d1f32fb083cbb48e1baeda3f280c0dd838c0eb2c by Eike Hein.
Committed on 16/06/2016 at 19:33.
Pushed by hein into branch 'Plasma/5.7'.

Fix cache invalidation for TasksModel::launcherCount.

Fixes regression from 6e72674a.

Testers: dfaure

M  +4    -8    libtaskmanager/tasksmodel.cpp

http://commits.kde.org/plasma-workspace/d1f32fb083cbb48e1baeda3f280c0dd838c0eb2c