Fix cache invalidation for TasksModel::launcherCount.

Fixes regression from 6e72674a.

Testers: dfaure
BUG:364378